--- a/README
+++ b/README
@@ -48,3 +48,5 @@ Alternatively, you may want to upload a binary file to the bag "common":
 
 
 There is also a Binary Upload Plugin for TiddlyWiki designed specifically to work with tiddlyweplugins.form. You can find it at http://svn.tiddlywiki.org/Trunk/contributors/BenGillies/TiddlyWeb/Plugins/Binary/tiddlers/BinaryUploadPlugin.tid
+
+You can find the source code at https://github.com/bengillies/tiddlywebplugins.form
